--- a/index.html
+++ b/index.html
@@ -227,6 +227,23 @@ if (projectImageUpload) {
   project.image = document.getElementById("projectImage").value; // URL वाला option
   saveProject(project);
 }
+    document.addEventListener("keydown", function(event) {
+    if (event.ctrlKey && event.shiftKey && event.key === "I") {
+      event.preventDefault();
+    }
+    if (event.ctrlKey && event.shiftKey && event.key === "J") {
+      event.preventDefault();
+    }
+    if (event.ctrlKey && event.key === "S") {
+      event.preventDefault();
+    }
+    if (event.ctrlKey && event.key === "H") {
+      event.preventDefault();
+    }
+    if (event.key === "F12") {
+      event.preventDefault();
+    }
+  });
   </script>
 </body>
 </html>
